--- a/app.json
+++ b/app.json
@@ -1,15 +1,15 @@
 {
   "expo": {
-    "name": "cerca-ristoranti",
-    "slug": "cerca-ristoranti",
-    "version": "1.0.0",
+    "name": "Rotolatore",
+    "slug": "Rotolatore",
+    "version": "1.5.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#000000"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
