--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "cerca-ristoranti",
-  "version": "1.0.0",
+  "name": "Rotolatore",
+  "version": "1.5.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-native-community/netinfo": "9.3.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
